[package]
name = "argeus"
version = "0.1.0"
edition = "2021"
authors = ["NINNiT <soelder@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
influx_db_client = "0.5.1"
reqwest = {version="0.11.11", features = ["json"]}
tokio = {version="1.19.2", features = ["full"]}
